changed client package name

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remote-repo-mern-app",
+  "name": "remote-repo-mern-app-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
