--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "remote-repo-mern-app",
+  "name": "remote-repo-mern-app-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon backend/server.js"
+    "dev": "nodemon server.js"
   },
   "type": "module",
   "keywords": [],
